# ChiSqrFit

./: .gitignore  CMakeLists.txt  DrawFitResultSkript.cpp  InitCMAKESubDirectory.sh  README.md  main.cpp  psdata.cpp  realdata.cpp
source/include/: DrawFitResult.h  Example.h  Fit.h  RealData.h
source/src/: DrawFitResult.cpp  Example.cpp  Fit.cpp  RealData.cpp
source1/: CMakeLists.txt
source1/include/: DrawFitResult.h  Fit.h  RealData.h
source1/src/: DrawFitResult.cpp  Fit.cpp  PlotDataSkript.cpp  RealData.cpp
